--- a/my_app/templates/main/contact.html
+++ b/my_app/templates/main/contact.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Contact || PassAdmin</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'contactstyle.css' %}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 </head>
 <body>
 	<div class="parent">
