--- a/my_app/templates/main/nav.html
+++ b/my_app/templates/main/nav.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
-	<link rel="shortcut icon" href="{%static 'Assets/Images/Favicon.ico'%}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 	<link rel="stylesheet" type="text/css" href="{% static 'navstyle.css' %}">
 </head>
 <body class="body">
@@ -28,6 +28,7 @@
     				<li><a href="/Home_About" class="nav-anchor"><ion-icon name="document-text-outline"></ion-icon>About</a></li>
     				<li><a href="/Contact_us" class="nav-anchor"><ion-icon name="call-outline"></ion-icon>Contact Us</a></li>
     				<li><a href="/logout" class="nav-anchor"><ion-icon name="log-out-outline"></ion-icon>Log out</a></li>
+    				<li class="close"><a class="nav-anchor close"><ion-icon name="close-outline"></ion-icon>Close</a></li>
     			</ul>
     		    </div>
 
@@ -43,9 +44,11 @@
 	<script type="text/javascript">
 	let ham_btn = document.querySelector('.hamburg')
 	let bar = document.querySelector('.side-bar')
+	let close = document.querySelector('.close')
 	let nav_exit = document.querySelector('.exit-btn')
 	let body = document.getElementsByTagName('body')[0]
 	ham_btn.addEventListener('click', prfunc)
+	close.addEventListener('click', exfunc)
 	nav_exit.addEventListener('click', exfunc)
 	//theme.addEventListener('click', themefunc)
 	function prfunc() {
