--- a/register/templates/register/Why_us.html
+++ b/register/templates/register/Why_us.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Why PassAdmin</title>
 	<link rel="stylesheet" type="text/css" href="{%static 'why_us.css'%}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 </head>
 <body>
 	<div class="parent">
