--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PassAdmin</title>
 	<link rel="stylesheet" type="text/css" href="{%static 'home.css'%}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 </head>
 <body class="body">
 {%include 'register/nav.html'%}
