--- a/register/templates/register/password_reset.html
+++ b/register/templates/register/password_reset.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Password Reset</title>
 	<link rel="stylesheet" type="text/css" href="{%static 'password_reset.css'%}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 </head>
 <body>
 	{%include 'register/nav.html'%}
