--- a/register/templates/register/reset-complt.html
+++ b/register/templates/register/reset-complt.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="{%static 'password_reset.css'%}">
+	<link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico'%}"/>
 	<title>Reset Complete!</title>
 </head>
 <body>
