--- a/static/contactstyle.css
+++ b/static/contactstyle.css
@@ -44,13 +44,12 @@ span
 }
 .sec-head
 {
-	font-size: 35px;
+	font-size: 30px;
 	margin-top: 10px;
 	font-family: Montserrat-medium;
 	max-width: 50%;
-	position: absolute;
-	left: 20px;
-	top: 80px;
+	margin-right: auto;	
+	margin-left: 20px;
 
 }
 .parent
@@ -81,6 +80,10 @@ form
 	margin-top: 50px;
 	padding: 10px	;
 }
+form
+{
+	width: 50%;
+}
 .int
 {
 	border: none;
@@ -88,18 +91,20 @@ form
 	background: transparent;
 	color: white;
 	padding: 5px;
-	width: 500px;
+	width: 100%;
 	margin: 10px;
 	font-size: 24px;
 	font-family: Montserrat-light;
 	border-bottom: 2px solid #F6F6F6;
 }
+.vector-wrap
+{
+	width: 50%;
+}
 .vector
 {
-	max-width: 90%;
-
+	width: 100%;
 }
-
 ::-webkit-input-placeholder {
   color: #F6F6F6;
   font-size: 25px;
