--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -18,8 +18,10 @@
 			<p class="main-cont">
 			Pass<span class="logo-sp">Admin</span> is your one stop<br> Site for keeping your<br> Passwords <span class="ul"><br>Safe and Secure.</span><br>Sign In or Sign Up to continue
 		    </p>
-		    <a href="/login"><button class="btn signin" href="/login">Sign In</button></a>
-		    <a href="/register"><button class="btn signup" href="/register">Sign up</button></a>
+		    <div class="FLEX">
+		    <a href="/login" class="FLEX"><button class="btn signin" href="/login">Sign In</button></a>
+		    <a href="/register" class="FLEX"><button class="btn signup" href="/register">Sign up</button></a>
+		    </div>
 		</div>
 		<div class="vector">
 			<img src="{%static 'Assets/Images/hmpgvc.svg'%}">
