--- a/my_app/templates/main/Email.html
+++ b/my_app/templates/main/Email.html
@@ -1,6 +1,9 @@
 ___MESSAGE FROM PASSADMIN_CT___
 
-Message from {{name}}{{lsname}}
+/*_______________________________*\
+
+
+Message from {{name}}
 Email: {{mail}}
-Message: {{msg}}
-Details: {{det}}
+Subject: {{sub}}
+Details: {{msg}}
