--- a/static/contactstyle.css
+++ b/static/contactstyle.css
@@ -24,6 +24,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+html
+{
+	font-size: 62.5%;
+}
 body
 {
 	/*background: linear-gradient(-45deg,#191919,#090909);*/
@@ -32,107 +36,123 @@ body
 	font-family: Montserrat-regular;
 	
 }
-.logo
-{
-    font-family: Montserrat-SemiBold;
-    font-size: 40px;
-    pointer-events: none;
+.parent{
+	width: 100%;
+	min-height: 80vh;
+	flex-wrap: wrap;
 }
-span
+.content-div
 {
-	color: #3B21F1;
+	width: 50%;
 }
-.sec-head
+a
 {
-	font-size: 30px;
-	margin-top: 10px;
-	font-family: Montserrat-medium;
-	max-width: 50%;
-	margin-right: auto;	
-	margin-left: 20px;
-
+	color: white;
 }
-.parent
+/*----------------------------------Utilities----------------------------------*/
+.flex
+{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 15px;
+}
+.ic-sz
+{
+	max-width: 4%;
+}
+.form
 {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
 }
 .header
 {
-	margin-left: 10px;
+	font-size: 4rem;
+	font-family: Montserrat-medium;
+	text-decoration: underline;
 }
-form
+.content p
+{
+	font-size: 2rem;
+	font-family: Montserrat-light;
+	letter-spacing: 1px;
+}
+.soc-header p
+{
+	font-family: Montserrat-regular;
+	font-size: 3rem;
+	text-decoration: underline;
+	margin-top: 1.5rem;
+}
+.soc-anchor
+{
+	font-size: 2rem;
+	font-family: Montserrat-light;
+	text-decoration: none;
+}
+.soc-anchor img
+{
+	margin-right: 5px;
+	margin-top: 5px;
+}
+.social-med
 {
 	display: flex;
 	flex-direction: column;
-	max-width: 50%;
-	align-items: flex-start;
 }
-.main-cnt
-{
-	display: flex;
-	width: 100%;
-	justify-content: space-evenly;
-	align-items: center;
-	margin-top: 50px;
-	padding: 10px	;
-}
-form
+.form-div
 {
 	width: 50%;
+
 }
 .int
 {
-	border: none;
-	outline: none;
-	background: transparent;
+	background: none;
+	border: 2px solid #fff;
+	height: 5rem;
+	margin: 1.5rem;
 	color: white;
-	padding: 5px;
-	width: 100%;
-	margin: 10px;
+	padding: 15px;
 	font-size: 24px;
-	font-family: Montserrat-light;
-	border-bottom: 2px solid #F6F6F6;
 }
-.vector-wrap
+.sub
 {
-	width: 50%;
+	margin-top: 1.5rem;
+	background: white;
+	color: black;
+	text-align: center;
+	transition: 1s;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: none;
+	padding: 0;
+	outline: none;
+	font-family: Montserrat-medium;
+
 }
-.vector
+.sub:hover
 {
-	width: 100%;
+	background: black;
+	color: white;
 }
 ::-webkit-input-placeholder {
   color: #F6F6F6;
   font-size: 25px;
   font-family: Montserrat-light;
 }
-.btn1
-{
-	padding: 15px 20px 15px 20px;
-	background: #3B21F1;
-	border: none;
-	outline: none;
-	border-radius: 30px;
-	margin-top: 20px;
-	color: white;
-	font-size: 20px;
-	letter-spacing: .5px;
-	font-family: Montserrat-medium;
-	cursor: pointer;
-	margin-left: 10px;
-}
 @media (max-width: 900px)
 {
-	.vectorwrap
+	.parent
 	{
-		display: none;
+		flex-direction: column;
 	}
-	.sec-head
+	.content-div, .form-div
 	{
-		font-size: 30px;
+		width: 100%;
 	}
+
 }
